chore: new translations apps-journeys-admin.json Spanish

--- a/libs/locales/es-ES/apps-journeys-admin.json
+++ b/libs/locales/es-ES/apps-journeys-admin.json
@@ -1,6 +1,6 @@
 {
-  "%s | Next Steps": "%s | Next Steps",
-  "Admin | Next Steps": "Admin | Next Steps",
+  "%s | Next Steps": "%s | Próximos pasos",
+  "Admin | Next Steps": "Admin | Próximos pasos",
   "Journeys": "Journeys",
   "Create a New Journey": "Create a New Journey",
   "Request Access": "Request Access",
