--- a/libs/locales/es-ES/apps-journeys.json
+++ b/libs/locales/es-ES/apps-journeys.json
@@ -1,7 +1,7 @@
 {
   "404": "404",
   "500": "500",
-  "%s | Next Steps": "%s | Next Steps",
+  "%s | Next Steps": "%s | Próximos pasos",
   "Next Steps": "Next Steps",
   "This Journey is not available.": "This Journey is not available.",
   "Oops! Something went wrong.": "Oops! Something went wrong.",
