--- a/libs/locales/fr-FR/libs-journeys-ui.json
+++ b/libs/locales/fr-FR/libs-journeys-ui.json
@@ -1,22 +1,22 @@
 {
-  "Form": "Form",
-  "Name must be 2 characters or more": "Name must be 2 characters or more",
-  "Name must be 50 characters or less": "Name must be 50 characters or less",
-  "Required": "Required",
-  "Please enter a valid email address": "Please enter a valid email address",
-  "Name": "Name",
-  "Email": "Email",
-  "Submit": "Submit",
-  "Journey": "Journey",
-  "Copied to clipboard": "Copied to clipboard",
-  "Share": "Share",
-  "Copy Link": "Copy Link",
+  "Form": "Formulaire",
+  "Name must be 2 characters or more": "Le nom doit comporter 2 caractères ou plus",
+  "Name must be 50 characters or less": "Le nom doit comporter 50 caractères ou moins",
+  "Required": "Exigée",
+  "Please enter a valid email address": "Saisis une adresse électronique valide",
+  "Name": "Nom",
+  "Email": "Courriel",
+  "Submit": "Soumettre",
+  "Journey": "Voyage",
+  "Copied to clipboard": "Copié dans le presse-papiers",
+  "Share": "Partager",
+  "Copy Link": "Copier le lien",
   "Facebook": "Facebook",
   "Twitter": "Twitter",
-  "Report this content": "Report this content",
-  "Terms & Conditions": "Terms & Conditions",
-  "All personal identifiable data registered on this website will be processed by journey creator: \"{{ teamTitle }}\".": "All personal identifiable data registered on this website will be processed by journey creator: \"{{ teamTitle }}\".",
+  "Report this content": "Signaler ce contenu",
+  "Terms & Conditions": "Conditions générales",
+  "All personal identifiable data registered on this website will be processed by journey creator: \"{{ teamTitle }}\".": "Toutes les données personnelles identifiables enregistrées sur ce site seront traitées par journey creator : \"{{ teamTitle }}\".",
   "NextSteps © {{year}}": "NextSteps © {{year}}",
-  "Untitled": "Untitled",
-  "Step {{number}}": "Step {{number}}"
+  "Untitled": "Sans titre",
+  "Step {{number}}": "Étape {{number}}"
 }
