--- a/libs/locales/es-ES/apps-journeys.json
+++ b/libs/locales/es-ES/apps-journeys.json
@@ -2,12 +2,12 @@
   "404": "404",
   "500": "500",
   "%s | Next Steps": "%s | Próximos pasos",
-  "Next Steps": "Next Steps",
-  "This Journey is not available.": "This Journey is not available.",
-  "Oops! Something went wrong.": "Oops! Something went wrong.",
-  "<0>This page has been created to test the embed code.<1>If youve found this page in error click the button below.</1></0>": "<0>This page has been created to test the embed code.<1>If youve found this page in error click the button below.</1></0>",
-  "Get me out of here!": "Get me out of here!",
-  "Terms & Conditions": "Terms & Conditions",
-  "Privacy Policy": "Privacy Policy",
-  "NextSteps © {{year}}": "NextSteps © {{year}}"
+  "Next Steps": "Próximos pasos",
+  "This Journey is not available.": "Este Viaje no está disponible.",
+  "Oops! Something went wrong.": "¡Uy! Algo ha salido mal.",
+  "<0>This page has been created to test the embed code.<1>If youve found this page in error click the button below.</1></0>": "<0>Esta página se ha creado para probar el código de inserción<1>. Si has encontrado esta página con un error, haz clic en el botón de abajo.</1></0>",
+  "Get me out of here!": "¡Sácame de aquí!",
+  "Terms & Conditions": "Condiciones generales",
+  "Privacy Policy": "Política de privacidad",
+  "NextSteps © {{year}}": "Próximos pasos © {{year}}"
 }
