chore: new translations libs-journeys-ui.json Spanish

--- a/libs/locales/es-ES/libs-journeys-ui.json
+++ b/libs/locales/es-ES/libs-journeys-ui.json
@@ -1,22 +1,22 @@
 {
-  "Form": "Form",
-  "Name must be 2 characters or more": "Name must be 2 characters or more",
-  "Name must be 50 characters or less": "Name must be 50 characters or less",
-  "Required": "Required",
-  "Please enter a valid email address": "Please enter a valid email address",
-  "Name": "Name",
-  "Email": "Email",
-  "Submit": "Submit",
-  "Journey": "Journey",
-  "Copied to clipboard": "Copied to clipboard",
-  "Share": "Share",
-  "Copy Link": "Copy Link",
+  "Form": "Formulario",
+  "Name must be 2 characters or more": "El nombre debe tener 2 caracteres o más",
+  "Name must be 50 characters or less": "El nombre debe tener 50 caracteres o menos",
+  "Required": "Necesario",
+  "Please enter a valid email address": "Introduce una dirección de correo electrónico válida",
+  "Name": "Nombre",
+  "Email": "Envía un correo electrónico a",
+  "Submit": "Envía",
+  "Journey": "Viaje",
+  "Copied to clipboard": "Copiado al portapapeles",
+  "Share": "Comparte",
+  "Copy Link": "Copiar enlace",
   "Facebook": "Facebook",
   "Twitter": "Twitter",
-  "Report this content": "Report this content",
-  "Terms & Conditions": "Terms & Conditions",
-  "All personal identifiable data registered on this website will be processed by journey creator: \"{{ teamTitle }}\".": "All personal identifiable data registered on this website will be processed by journey creator: \"{{ teamTitle }}\".",
-  "NextSteps © {{year}}": "NextSteps © {{year}}",
-  "Untitled": "Untitled",
-  "Step {{number}}": "Step {{number}}"
+  "Report this content": "Informar sobre este contenido",
+  "Terms & Conditions": "Condiciones generales",
+  "All personal identifiable data registered on this website will be processed by journey creator: \"{{ teamTitle }}\".": "Todos los datos personales identificables registrados en este sitio web serán procesados por el creador del viaje: \"{{ teamTitle }}\".",
+  "NextSteps © {{year}}": "Próximos pasos © {{year}}",
+  "Untitled": "Sin título",
+  "Step {{number}}": "Paso {{number}}"
 }
