--- a/libs/locales/ja-JP/libs-journeys-ui.json
+++ b/libs/locales/ja-JP/libs-journeys-ui.json
@@ -1,22 +1,22 @@
 {
-  "Form": "Form",
-  "Name must be 2 characters or more": "Name must be 2 characters or more",
-  "Name must be 50 characters or less": "Name must be 50 characters or less",
-  "Required": "Required",
-  "Please enter a valid email address": "Please enter a valid email address",
-  "Name": "Name",
-  "Email": "Email",
-  "Submit": "Submit",
-  "Journey": "Journey",
-  "Copied to clipboard": "Copied to clipboard",
-  "Share": "Share",
-  "Copy Link": "Copy Link",
-  "Facebook": "Facebook",
-  "Twitter": "Twitter",
-  "Report this content": "Report this content",
-  "Terms & Conditions": "Terms & Conditions",
-  "All personal identifiable data registered on this website will be processed by journey creator: \"{{ teamTitle }}\".": "All personal identifiable data registered on this website will be processed by journey creator: \"{{ teamTitle }}\".",
+  "Form": "フォーム",
+  "Name must be 2 characters or more": "氏名は2文字以上",
+  "Name must be 50 characters or less": "氏名は50文字以内",
+  "Required": "必須",
+  "Please enter a valid email address": "有効なEメールアドレスを入力してください。",
+  "Name": "名称",
+  "Email": "電子メール",
+  "Submit": "投稿する",
+  "Journey": "旅",
+  "Copied to clipboard": "クリップボードにコピー",
+  "Share": "シェア",
+  "Copy Link": "コピーリンク",
+  "Facebook": "フェイスブック",
+  "Twitter": "ツイッター",
+  "Report this content": "この内容を報告する",
+  "Terms & Conditions": "ご利用条件",
+  "All personal identifiable data registered on this website will be processed by journey creator: \"{{ teamTitle }}\".": "本サイトに登録された個人情報は、旅クリエイターによって処理されます：\"{{ teamTitle }}\".",
   "NextSteps © {{year}}": "NextSteps © {{year}}",
-  "Untitled": "Untitled",
-  "Step {{number}}": "Step {{number}}"
+  "Untitled": "無題",
+  "Step {{number}}": "ステップ {{number}}"
 }
