chore: new translations libs-journeys-ui.json Turkish

--- a/libs/locales/tr-TR/libs-journeys-ui.json
+++ b/libs/locales/tr-TR/libs-journeys-ui.json
@@ -1,22 +1,22 @@
 {
   "Form": "Form",
-  "Name must be 2 characters or more": "Name must be 2 characters or more",
-  "Name must be 50 characters or less": "Name must be 50 characters or less",
-  "Required": "Required",
-  "Please enter a valid email address": "Please enter a valid email address",
-  "Name": "Name",
-  "Email": "Email",
-  "Submit": "Submit",
-  "Journey": "Journey",
-  "Copied to clipboard": "Copied to clipboard",
-  "Share": "Share",
-  "Copy Link": "Copy Link",
+  "Name must be 2 characters or more": "İsim 2 karakter veya daha fazla olmalıdır",
+  "Name must be 50 characters or less": "İsim 50 karakter veya daha az olmalıdır",
+  "Required": "Gerekli",
+  "Please enter a valid email address": "Lütfen geçerli bir e-posta adresi girin",
+  "Name": "İsim",
+  "Email": "E-posta",
+  "Submit": "Gönder",
+  "Journey": "Yolculuk",
+  "Copied to clipboard": "Panoya kopyalandı",
+  "Share": "Paylaş",
+  "Copy Link": "Bağlantıyı Kopyala",
   "Facebook": "Facebook",
   "Twitter": "Twitter",
-  "Report this content": "Report this content",
-  "Terms & Conditions": "Terms & Conditions",
-  "All personal identifiable data registered on this website will be processed by journey creator: \"{{ teamTitle }}\".": "All personal identifiable data registered on this website will be processed by journey creator: \"{{ teamTitle }}\".",
+  "Report this content": "Bu içeriği bildir",
+  "Terms & Conditions": "Şartlar ve Koşullar",
+  "All personal identifiable data registered on this website will be processed by journey creator: \"{{ teamTitle }}\".": "Bu web sitesinde kayıtlı tüm kişisel tanımlanabilir veriler, yolculuk yaratıcısı tarafından işlenecektir: \"{{ teamTitle }}\".",
   "NextSteps © {{year}}": "NextSteps © {{year}}",
-  "Untitled": "Untitled",
-  "Step {{number}}": "Step {{number}}"
+  "Untitled": "İsimsiz",
+  "Step {{number}}": "Adım {{number}}"
 }
