chore: new translations libs-journeys-ui.json Indonesian

--- a/libs/locales/id-ID/libs-journeys-ui.json
+++ b/libs/locales/id-ID/libs-journeys-ui.json
@@ -1,22 +1,22 @@
 {
-  "Form": "Form",
-  "Name must be 2 characters or more": "Name must be 2 characters or more",
-  "Name must be 50 characters or less": "Name must be 50 characters or less",
-  "Required": "Required",
-  "Please enter a valid email address": "Please enter a valid email address",
-  "Name": "Name",
+  "Form": "Formulir",
+  "Name must be 2 characters or more": "Nama harus terdiri dari 2 karakter atau lebih",
+  "Name must be 50 characters or less": "Nama harus terdiri dari 50 karakter atau kurang",
+  "Required": "Diperlukan",
+  "Please enter a valid email address": "Masukkan alamat email yang valid",
+  "Name": "Nama",
   "Email": "Email",
-  "Submit": "Submit",
-  "Journey": "Journey",
-  "Copied to clipboard": "Copied to clipboard",
-  "Share": "Share",
-  "Copy Link": "Copy Link",
+  "Submit": "Kirim",
+  "Journey": "Perjalanan",
+  "Copied to clipboard": "Disalin ke papan klip",
+  "Share": "Bagikan",
+  "Copy Link": "Salin tautan",
   "Facebook": "Facebook",
   "Twitter": "Twitter",
-  "Report this content": "Report this content",
-  "Terms & Conditions": "Terms & Conditions",
-  "All personal identifiable data registered on this website will be processed by journey creator: \"{{ teamTitle }}\".": "All personal identifiable data registered on this website will be processed by journey creator: \"{{ teamTitle }}\".",
+  "Report this content": "Laporkan konten ini",
+  "Terms & Conditions": "Syarat & Ketentuan",
+  "All personal identifiable data registered on this website will be processed by journey creator: \"{{ teamTitle }}\".": "Semua data pribadi yang dapat diidentifikasi yang terdaftar di situs web ini akan diproses oleh pembuat perjalanan: \"{{ teamTitle }}\".",
   "NextSteps © {{year}}": "NextSteps © {{year}}",
-  "Untitled": "Untitled",
-  "Step {{number}}": "Step {{number}}"
+  "Untitled": "Tanpa judul",
+  "Step {{number}}": "Langkah {{number}}"
 }
