chore: extract translations

--- a/libs/locales/en/apps-journeys-admin.json
+++ b/libs/locales/en/apps-journeys-admin.json
@@ -85,7 +85,8 @@
   "Appears on": "Appears on",
   "cards": "cards",
   "card": "card",
-  "<0>Appears on <2>{{ count }}</2> {count > 1 ? 'cards' : 'card'}</0>": "<0>Appears on <2>{{ count }}</2> {count > 1 ? 'cards' : 'card'}</0>",
+  "<0>Appears on <2>{{ count }}</2> {count > 1 ? 'cards' : 'card'}</0>_one": "<0>Appears on <2>{{ count }}</2> {count > 1 ? 'cards' : 'card'}</0>",
+  "<0>Appears on <2>{{ count }}</2> {count > 1 ? 'cards' : 'card'}</0>_other": "<0>Appears on <2>{{ count }}</2> {count > 1 ? 'cards' : 'card'}</0>",
   "Next Card Properties": "Next Card Properties",
   "Hosted By": "Hosted By",
   "Card Templates": "Card Templates",
