chore: yet more t tags

--- a/libs/locales/en/apps-journeys-admin.json
+++ b/libs/locales/en/apps-journeys-admin.json
@@ -54,6 +54,7 @@
   "Approve": "Approve",
   "Promote": "Promote",
   "Remove": "Remove",
+  "Pending": "Pending",
   "Goals": "Goals",
   "Social Media": "Social Media",
   "Error loading report": "Error loading report",
@@ -293,6 +294,9 @@
   "Delete": "Delete",
   "Cancel": "Cancel",
   "Are you sure you would like to delete this card?": "Are you sure you would like to delete this card?",
+  "Delete {{ label }}": "Delete {{ label }}",
+  "{{ blockLabel }} Duplicated": "{{ blockLabel }} Duplicated",
+  "Duplicate {{ blockLabel }}": "Duplicate {{ blockLabel }}",
   "Preview": "Preview",
   "Link Copied": "Link Copied",
   "Copy Link": "Copy Link",
@@ -302,11 +306,11 @@
   "There was an error updating language": "There was an error updating language",
   "Edit Language": "Edit Language",
   "Language": "Language",
-  "Edit Journey Actions": "Edit Journey Actions",
   "Template Settings": "Template Settings",
   "Public information about a person or a team created this journey": "Public information about a person or a team created this journey",
   "Creator's Info": "Creator's Info",
   "Embed web link from Google Slides or Canva": "Embed web link from Google Slides or Canva",
+  "Add {{ tagLabel }}": "Add {{ tagLabel }}",
   "Recommended length: six words or shorter": "Recommended length: six words or shorter",
   "Publicly visible on template details page": "Publicly visible on template details page",
   "RTL languages will change the journey flow": "RTL languages will change the journey flow",
@@ -348,6 +352,7 @@
   "Unsplash": "Unsplash",
   "Featured Images": "Featured Images",
   "Load More": "Load More",
+  "Search by keyword": "Search by keyword",
   "Image is uploading...": "Image is uploading...",
   "Selected Image": "Selected Image",
   "Select Image": "Select Image",
@@ -369,6 +374,8 @@
   "Cover Image": "Cover Image",
   "Appears while video is loading": "Appears while video is loading",
   "Start time has to be at least 3 seconds less than end time": "Start time has to be at least 3 seconds less than end time",
+  "Start time has to be at least 3 seconds less than video duration {{ time }}": "Start time has to be at least 3 seconds less than video duration {{ time }}",
+  "End time has to be no more than video duration {{ time }}": "End time has to be no more than video duration {{ time }}",
   "Timing": "Timing",
   "Starts At": "Starts At",
   "Ends At": "Ends At",
@@ -403,6 +410,9 @@
   "Video Library": "Video Library",
   "Library": "Library",
   "Upload": "Upload",
+  "No Results Found": "No Results Found",
+  "No More Videos": "No More Videos",
+  "Search by title in JF Library": "Search by title in JF Library",
   "Journeys Archived": "Journeys Archived",
   "Journeys Trashed": "Journeys Trashed",
   "No journeys to display.": "No journeys to display.",
@@ -526,10 +536,10 @@
   "When visitors click the info icon, they will see text from the Legal Name box. This text can be a mission name, website title, or other public information.": "When visitors click the info icon, they will see text from the Legal Name box. This text can be a mission name, website title, or other public information.",
   "Create a team to hold your NextStep journeys and collaborate with others.": "Create a team to hold your NextStep journeys and collaborate with others.",
   "Team Name must be at least one character.": "Team Name must be at least one character.",
-  "Max {{ count }} Characters_one": "Max {{ count }} Characters",
-  "Max {{ count }} Characters_other": "Max {{ count }} Characters",
+  "Max 40 Characters": "Max 40 Characters",
   "This field cannot contain only blankspaces": "This field cannot contain only blankspaces",
   "{{ teamName }} created.": "{{ teamName }} created.",
+  "Team created.": "Team created.",
   "Failed to create the team. Reload the page or try again.": "Failed to create the team. Reload the page or try again.",
   "Manage Members": "Manage Members",
   "Invite team member": "Invite team member",
@@ -546,7 +556,7 @@
   "More journeys here": "More journeys here",
   "Journeys are grouped by teams. You can switch between teams by using this dropdown.": "Journeys are grouped by teams. You can switch between teams by using this dropdown.",
   "Dismiss": "Dismiss",
-  "{{ data }} updated.": "{{ data }} updated.",
+  "{{ teamName }} updated.": "{{ teamName }} updated.",
   "Team updated.": "Team updated.",
   "Failed to update the team. Reload the page or try again.": "Failed to update the team. Reload the page or try again.",
   "Change Team Name": "Change Team Name",
@@ -591,6 +601,9 @@
   "Related Templates": "Related Templates",
   "Before You Start": "Before You Start",
   "Please review these documents:": "Please review these documents:",
+  "Terms of Use": "Terms of Use",
+  "End User License Agreement": "End User License Agreement",
+  "Community Guidelines": "Community Guidelines",
   "I agree with listed above conditions and requirements": "I agree with listed above conditions and requirements",
   "Open conversation": "Open conversation",
   "Username": "Username",
