feat: language confirmation

--- a/libs/locales/zh-CN/apps-journeys-admin.json
+++ b/libs/locales/zh-CN/apps-journeys-admin.json
@@ -83,6 +83,9 @@
   "Let's Connect": "让我们联系吧",
   "From 'hello' to heartfelt conversations": "从“你好”到真诚的交谈",
   "Chat with us": "与我们聊天",
+  "Change Language": "更改语言",
+  "Revert": "返回",
+  "Are you sure you want to change language?": "您确定要更换语言吗？",
   "Email us": "给我们发电子邮件",
   "More about us": "更多关于我们",
   "Prayer Request": "祈祷请求",
