--- a/libs/locales/en/apps-journeys-admin.json
+++ b/libs/locales/en/apps-journeys-admin.json
@@ -340,11 +340,9 @@
   "min": "min",
   "Name": "Name",
   "Chat Started": "Chat Started",
-  "Confirm Language Change": "Confirm Language Change",
-  "Are you sure you want to change language?": "Are you sure you want to change language?",
-  "Yes": "Yes",
-  "No": "No",
   "Change Language": "Change Language",
+  "Revert": "Revert",
+  "Are you sure you want to change language?": "Are you sure you want to change language?",
   "Reports": "Reports",
   "See all": "See all",
   "Help us serve you better": "Help us serve you better",
