chore: more t tags

--- a/libs/locales/en/apps-journeys-admin.json
+++ b/libs/locales/en/apps-journeys-admin.json
@@ -62,15 +62,18 @@
   "The report is loading...": "The report is loading...",
   "Appears on the cards": "Appears on the cards",
   "Once you replace the URL it will apply on each of the following cards:": "Once you replace the URL it will apply on each of the following cards:",
+  "Feedback": "Feedback",
+  "Poll": "Poll",
+  "Subscribe": "Subscribe",
   "Invalid URL": "Invalid URL",
+  "Start a Conversation": "Start a Conversation",
+  "Link to Bible": "Link to Bible",
   "Navigate to": "Navigate to",
   "What are Goals?": "What are Goals?",
   "Depending on the link you provide for the actions, the target of your Journey will be determined automatically from the following list:": "Depending on the link you provide for the actions, the target of your Journey will be determined automatically from the following list:",
-  "Start a Conversation": "Start a Conversation",
   "If the goal is to go any chat platform": "If the goal is to go any chat platform",
   "Visit a Website": "Visit a Website",
   "This could be your church or ministry website, or whatever you want to redirect the viewer to.": "This could be your church or ministry website, or whatever you want to redirect the viewer to.",
-  "Link to Bible": "Link to Bible",
   "If the target of the journey is to download the Bible": "If the target of the journey is to download the Bible",
   "Information": "Information",
   "Learn More": "Learn More",
@@ -95,6 +98,7 @@
   "Select Card Template": "Select Card Template",
   "or add blocks from the list below ⤵": "or add blocks from the list below ⤵",
   "Edit text...": "Edit text...",
+  "Type your text here...": "Type your text here...",
   "Add New Option": "Add New Option",
   "Add your text here...": "Add your text here...",
   "Properties": "Properties",
@@ -122,6 +126,10 @@
   "The Bible Says:": "The Bible Says:",
   "Blessed are the peacemakers, for they shall be called sons of God.": "Blessed are the peacemakers, for they shall be called sons of God.",
   "– Jesus Christ": "– Jesus Christ",
+  "None": "None",
+  "Next Step": "Next Step",
+  "Selected Card": "Selected Card",
+  "URL/Website": "URL/Website",
   "Navigate to:": "Navigate to:",
   "Redirect user to the selected resource": "Redirect user to the selected resource",
   "Invalid Email": "Invalid Email",
@@ -131,13 +139,9 @@
   "Default Next Step defined in the current card settings.": "Default Next Step defined in the current card settings.",
   "Select the Journey...": "Select the Journey...",
   "Card": "Card",
-  "Subscribe": "Subscribe",
-  "Feedback": "Feedback",
-  "Poll": "Poll",
   "Poll Option": "Poll Option",
   "Editing {{block}} Properties": "Editing {{block}} Properties",
   "Action": "Action",
-  "None": "None",
   "Color": "Color",
   "Background Color": "Background Color",
   "Button Color": "Button Color",
@@ -250,7 +254,6 @@
   "Center": "Center",
   "Right": "Right",
   "Text Variant": "Text Variant",
-  "primary": "primary",
   "Text Color": "Text Color",
   "Text Alignment": "Text Alignment",
   "Header 1": "Header 1",
@@ -267,6 +270,23 @@
   "Overline": "Overline",
   "Video Source": "Video Source",
   "Video Options": "Video Options",
+  "Arrow Right": "Arrow Right",
+  "Arrow Left": "Arrow Left",
+  "Been Here": "Been Here",
+  "Chat Bubble": "Chat Bubble",
+  "Check Circle": "Check Circle",
+  "Chevron Right": "Chevron Right",
+  "Chevron Left": "Chevron Left",
+  "Contact Support": "Contact Support",
+  "Format Quote": "Format Quote",
+  "Live Tv": "Live Tv",
+  "Lock Open": "Lock Open",
+  "Menu Book": "Menu Book",
+  "Play Arrow": "Play Arrow",
+  "Radio Button Uncheked": "Radio Button Uncheked",
+  "Send": "Send",
+  "Subscription": "Subscription",
+  "Translate": "Translate",
   "Select an icon...": "Select an icon...",
   "Move Up or Down": "Move Up or Down",
   "Select a Block to Insert": "Select a Block to Insert",
@@ -563,9 +583,9 @@
   "Save": "Save",
   "Only a manager can invite new members to the team": "Only a manager can invite new members to the team",
   "No email notifications. New members get access instantly. Team members can see all analytics, edit any journey, and delete and copy journey.": "No email notifications. New members get access instantly. Team members can see all analytics, edit any journey, and delete and copy journey.",
-  "<0>Journey Templates</0><1>in</1><2>{{firstLanguage}} {{secondLanguage}}</2>": "<0>Journey Templates</0><1>in</1><2>{{firstLanguage}}, {{secondLanguage}}</2>",
+  "<0>Journey Templates</0><1>in</1><2>{{firstLanguage}} {{secondLanguage}}</2>": "<0>Journey Templates</0><1>in</1><2>{{firstLanguage}} {{secondLanguage}}</2>",
   "<0>Journey Templates</0><1>in</1><2>{{firstLanguage}}</2>_one": "<0>Journey Templates</0><1>in</1><2>{{firstLanguage}}</2>",
-  "<0>Journey Templates</0><1>in</1><2>{{firstLanguage}}</2>_other": "<0>Journey Templates</0><1>in</1><2>{{count}} languages</2>",
+  "<0>Journey Templates</0><1>in</1><2>{{firstLanguage}}</2>_other": "<0>Journey Templates</0><1>in</1><2>{{firstLanguage}}</2>",
   "Topics, holidays, felt needs, collections": "Topics, holidays, felt needs, collections",
   "Audience": "Audience",
   "Genre": "Genre",
@@ -594,9 +614,9 @@
   "Use This Template": "Use This Template",
   "Add Journey to Team": "Add Journey to Team",
   "Use this template to make it your journey": "Use this template to make it your journey",
-  "{{count}} Cards_one": "{{count}} Card",
+  "{{count}} Cards_one": "{{count}} Cards",
   "{{count}} Cards_other": "{{count}} Cards",
-  "{{count}} Videos_one": "{{count}} Video",
+  "{{count}} Videos_one": "{{count}} Videos",
   "{{count}} Videos_other": "{{count}} Videos",
   "Related Templates": "Related Templates",
   "Before You Start": "Before You Start",
@@ -609,6 +629,8 @@
   "Username": "Username",
   "Private Note": "Private Note",
   "Visible to your team only": "Visible to your team only",
+  "{{ length }} more event": "{{ length }} more event",
+  "{{ length }} more events": "{{ length }} more events",
   "User left journey with no actions": "User left journey with no actions",
   "Journey Started": "Journey Started",
   "Chat Opened": "Chat Opened",
@@ -618,17 +640,14 @@
   "Form submitted": "Form submitted",
   "Sign Up Submission": "Sign Up Submission",
   "Skip Step": "Skip Step",
-  "Next Step": "Next Step",
   "Video Start": "Video Start",
   "Video Play": "Video Play",
   "Video Pause": "Video Pause",
   "Video Progress": "Video Progress",
   "Video expanded to fullscreen at": "Video expanded to fullscreen at",
   "Video completed": "Video completed",
-  "Selected Card": "Selected Card",
   "ID": "ID",
   "Last Active": "Last Active",
   "User Data": "User Data",
-  "Polls": "Polls",
-  "<0>Journey Templates</0><1>in</1><2>{{firstLanguage}}</2>_zero": "<0>Journey Templates</0><1>in</1><2>All Languages</2>"
+  "Polls": "Polls"
 }
