chore: more t tags yay

--- a/libs/locales/en/apps-journeys-admin.json
+++ b/libs/locales/en/apps-journeys-admin.json
@@ -54,6 +54,9 @@
   "Approve": "Approve",
   "Promote": "Promote",
   "Remove": "Remove",
+  "Manage": "Manage",
+  "Owner": "Owner",
+  "Editor": "Editor",
   "Pending": "Pending",
   "Goals": "Goals",
   "Social Media": "Social Media",
@@ -95,8 +98,7 @@
   "Hosted By": "Hosted By",
   "Card Templates": "Card Templates",
   "Fill this card with content": "Fill this card with content",
-  "Select Card Template": "Select Card Template",
-  "or add blocks from the list below ⤵": "or add blocks from the list below ⤵",
+  "<0>Select Card Template</0><1>or add blocks from the list below ⤵</1>": "<0>Select Card Template</0><1>or add blocks from the list below ⤵</1>",
   "Edit text...": "Edit text...",
   "Type your text here...": "Type your text here...",
   "Add New Option": "Add New Option",
@@ -378,6 +380,7 @@
   "Select Image": "Select Image",
   "Upload failed": "Upload failed",
   "No Image Selected": "No Image Selected",
+  "{{ width }} x {{ height }} pixels": "{{ width }} x {{ height }} pixels",
   "Change": "Change",
   "Access Control": "Access Control",
   "Code Copied": "Code Copied",
@@ -461,8 +464,8 @@
   "Unarchive": "Unarchive",
   "Are you sure you would like to unarchive all archived journeys immediately?": "Are you sure you would like to unarchive all archived journeys immediately?",
   "Are you sure you would like to trash all archived journeys immediately?": "Are you sure you would like to trash all archived journeys immediately?",
-  "user": "user",
-  "users": "users",
+  "1 user": "1 user",
+  "{{ numberOfUsers }} users": "{{ numberOfUsers }} users",
   "requested editing rights for your journey": "requested editing rights for your journey",
   "Journey Archived": "Journey Archived",
   "Journey Unarchived": "Journey Unarchived",
@@ -601,6 +604,7 @@
   "Unarchive Templates": "Unarchive Templates",
   "Are you sure you would like to unarchive all archived templates immediately?": "Are you sure you would like to unarchive all archived templates immediately?",
   "Are you sure you would like to trash all archived templates immediately?": "Are you sure you would like to trash all archived templates immediately?",
+  " - {{ description }}": " - {{ description }}",
   "Your trashed templates will appear here.": "Your trashed templates will appear here.",
   "Trashed templates are moved here for up to 40 days.": "Trashed templates are moved here for up to 40 days.",
   "Restore Templates": "Restore Templates",
@@ -629,22 +633,25 @@
   "Username": "Username",
   "Private Note": "Private Note",
   "Visible to your team only": "Visible to your team only",
+  "#{{ id }}": "#{{ id }}",
   "{{ length }} more event": "{{ length }} more event",
   "{{ length }} more events": "{{ length }} more events",
   "User left journey with no actions": "User left journey with no actions",
   "Journey Started": "Journey Started",
-  "Chat Opened": "Chat Opened",
-  "{{messagePlatform}}": "{{messagePlatform}}",
-  "Text submitted": "Text submitted",
-  "Button click": "Button click",
-  "Form submitted": "Form submitted",
+  "Chat Opened:": "Chat Opened:",
+  "{{ messagePlatform }}": "{{ messagePlatform }}",
+  "Text submitted:": "Text submitted:",
+  "Button click:": "Button click:",
+  "Form submitted:": "Form submitted:",
   "Sign Up Submission": "Sign Up Submission",
-  "Skip Step": "Skip Step",
+  "Poll:": "Poll:",
+  "Skip Step:": "Skip Step:",
   "Video Start": "Video Start",
   "Video Play": "Video Play",
   "Video Pause": "Video Pause",
-  "Video Progress": "Video Progress",
-  "Video expanded to fullscreen at": "Video expanded to fullscreen at",
+  "{{ label }} paused at {{ position }}": "{{ label }} paused at {{ position }}",
+  "Video Progress {{ progress }}%": "Video Progress {{ progress }}%",
+  "Video expanded to fullscreen at ({{ position }})": "Video expanded to fullscreen at ({{ position }})",
   "Video completed": "Video completed",
   "ID": "ID",
   "Last Active": "Last Active",
