--- a/libs/locales/en/apps-journeys-admin.json
+++ b/libs/locales/en/apps-journeys-admin.json
@@ -413,6 +413,7 @@
   "Video always muted on the first card": "Video always muted on the first card",
   "Select Video": "Select Video",
   "Custom Video": "Custom Video",
+  "{{ language }} ({{ nativeLanguage }})": "{{ language }} ({{ nativeLanguage }})",
   "YouTube": "YouTube",
   "Less": "Less",
   "More": "More",
@@ -605,6 +606,7 @@
   "Unarchive Templates": "Unarchive Templates",
   "Are you sure you would like to unarchive all archived templates immediately?": "Are you sure you would like to unarchive all archived templates immediately?",
   "Are you sure you would like to trash all archived templates immediately?": "Are you sure you would like to trash all archived templates immediately?",
+  "{{ nativeLanguage }} ({{ localLanguage }})": "{{ nativeLanguage }} ({{ localLanguage }})",
   " - {{ description }}": " - {{ description }}",
   "Your trashed templates will appear here.": "Your trashed templates will appear here.",
   "Trashed templates are moved here for up to 40 days.": "Trashed templates are moved here for up to 40 days.",
