test: fix test case

--- a/libs/locales/en/apps-journeys-admin.json
+++ b/libs/locales/en/apps-journeys-admin.json
@@ -467,7 +467,8 @@
   "Are you sure you would like to trash all archived journeys immediately?": "Are you sure you would like to trash all archived journeys immediately?",
   "1 user": "1 user",
   "{{ numberOfUsers }} users": "{{ numberOfUsers }} users",
-  "<0>{{ usersRequestingAccess }}</0><1>{t(`requested editing rights for your journey`)}</1>": "<0>{{ usersRequestingAccess }}</0><1>{t(`requested editing rights for your journey`)}</1>",
+  "<0>{t('{{ usersRequestingAccess }}', { usersRequestingAccess })}</0><1>{t(`requested editing rights for your journey`)}</1>": "<0>{t('{{ usersRequestingAccess }}', { usersRequestingAccess })}</0><1>{t(`requested editing rights for your journey`)}</1>",
+  "{{ usersRequestingAccess }}": "{{ usersRequestingAccess }}",
   "requested editing rights for your journey": "requested editing rights for your journey",
   "Journey Archived": "Journey Archived",
   "Journey Unarchived": "Journey Unarchived",
