chore: remove init funciton for exported translations

--- a/libs/locales/en/apps-journeys-admin.json
+++ b/libs/locales/en/apps-journeys-admin.json
@@ -391,7 +391,7 @@
   "Terms of agreement": "Terms of agreement",
   "Journey URL": "Journey URL",
   "Edit URL": "Edit URL",
-  "Field update failed. Reload the page or try again.": "Field update failed. Reload the page or try again.",
+  "Embed Journey": "Embed Journey",
   "Messaging App View": "Messaging App View",
   "Social App View": "Social App View",
   "Cover Image": "Cover Image",
