--- a/libs/locales/en/apps-journeys-admin.json
+++ b/libs/locales/en/apps-journeys-admin.json
@@ -467,7 +467,7 @@
   "Are you sure you would like to trash all archived journeys immediately?": "Are you sure you would like to trash all archived journeys immediately?",
   "1 user": "1 user",
   "{{ numberOfUsers }} users": "{{ numberOfUsers }} users",
-  "<0>{{ usersRequestingAccess }} </0><1>requested editing rights for your journey</1>": "<0>{{ usersRequestingAccess }} </0><1>requested editing rights for your journey</1>",
+  "<0>{usersRequestingAccess}</0><1>requested editing rights for your journey</1>": "<0>{usersRequestingAccess}</0><1>requested editing rights for your journey</1>",
   "Journey Archived": "Journey Archived",
   "Journey Unarchived": "Journey Unarchived",
   "Access": "Access",
