--- a/libs/locales/en/apps-journeys-admin.json
+++ b/libs/locales/en/apps-journeys-admin.json
@@ -26,6 +26,14 @@
   "Sign In": "Sign In",
   "Terms and Conditions": "Terms and Conditions",
   "A question about the terms and conditions form": "A question about the terms and conditions form",
+  "Required": "Required",
+  "Validate NextStep Email": "Validate NextStep Email",
+  "Please check your email for the six-digit token that was sent to your email address.": "Please check your email for the six-digit token that was sent to your email address.",
+  "Email": "Email",
+  "Token": "Token",
+  "Validate Email": "Validate Email",
+  "Resend Validation Email": "Resend Validation Email",
+  "Logout": "Logout",
   "You can't edit this journey": "You can't edit this journey",
   "Send an access request to the creator of this journey": "Send an access request to the creator of this journey",
   "Wait for Approval": "Wait for Approval",
@@ -45,9 +53,7 @@
   "Editor invite link copied": "Editor invite link copied",
   "Users invited by link will request approval.": "Users invited by link will request approval.",
   "Please enter a valid email address": "Please enter a valid email address",
-  "Required": "Required",
   "This email is already on the list": "This email is already on the list",
-  "Email": "Email",
   "No email notifications. New users get access instantly.": "No email notifications. New users get access instantly.",
   "Approve": "Approve",
   "Promote": "Promote",
@@ -279,6 +285,9 @@
   "Available Languages": "Available Languages",
   "Apply": "Apply",
   "Video Library": "Video Library",
+  "Please verify your email": "Please verify your email",
+  "You need to verify your email before you can continue.": "You need to verify your email before you can continue.",
+  "Send verification email": "Send verification email",
   "Journeys Archived": "Journeys Archived",
   "Journeys Trashed": "Journeys Trashed",
   "No journeys to display.": "No journeys to display.",
