fix: update translations

--- a/libs/locales/en/apps-journeys-admin.json
+++ b/libs/locales/en/apps-journeys-admin.json
@@ -11,7 +11,6 @@
   "Filters": "Filters",
   "A Few Questions": "A Few Questions",
   "a question about onboarding form": "a question about onboarding form",
-  "Edit Template": "Edit Template",
   "Access Denied": "Access Denied",
   "Templates Admin": "Templates Admin",
   "Journeys Analytics": "Journeys Analytics",
@@ -70,8 +69,9 @@
   "Start a Conversation": "Start a Conversation",
   "Link to Bible": "Link to Bible",
   "Visit a Website": "Visit a Website",
-  "Next Card Properties": "Next Card Properties",
+  "Form": "Form",
   "Hosted By": "Hosted By",
+  "Next Card Properties": "Next Card Properties",
   "Card Templates": "Card Templates",
   "Fill this card with content": "Fill this card with content",
   "Select Card Template": "Select Card Template",
@@ -79,6 +79,7 @@
   "Edit text...": "Edit text...",
   "Add New Option": "Add New Option",
   "Add your text here...": "Add your text here...",
+  "Are you sure you would like to delete this card?": "Are you sure you would like to delete this card?",
   "Properties": "Properties",
   "Let's Connect": "Let's Connect",
   "From 'hello' to heartfelt conversations": "From 'hello' to heartfelt conversations",
@@ -107,16 +108,42 @@
   "Navigate to:": "Navigate to:",
   "Redirect user to the selected resource": "Redirect user to the selected resource",
   "Default Next Step defined in the current card settings.": "Default Next Step defined in the current card settings.",
-  "Card": "Card",
-  "Subscribe": "Subscribe",
-  "Feedback": "Feedback",
-  "Poll": "Poll",
-  "Poll Option": "Poll Option",
-  "Editing {{block}} Properties": "Editing {{block}} Properties",
+  "Button Properties": "Button Properties",
+  "Form Properties": "Form Properties",
+  "Image Properties": "Image Properties",
+  "Poll Properties": "Poll Properties",
+  "Poll Option Properties": "Poll Option Properties",
+  "Subscribe Properties": "Subscribe Properties",
+  "Card Properties": "Card Properties",
+  "Feedback Properties": "Feedback Properties",
+  "Typography Properties": "Typography Properties",
+  "Video Properties": "Video Properties",
+  "Footer Properties": "Footer Properties",
+  "Social Share Preview": "Social Share Preview",
+  "Action": "Action",
+  "Color": "Color",
+  "Background Color": "Background Color",
+  "Button Color": "Button Color",
+  "Button Size": "Button Size",
+  "Variant": "Variant",
+  "Button Variant": "Button Variant",
+  "Leading Icon": "Leading Icon",
+  "Trailing Icon": "Trailing Icon",
   "Palette": "Palette",
   "Custom": "Custom",
   "Video": "Video",
   "Image": "Image",
+  "Background": "Background",
+  "Background Image": "Background Image",
+  "Background Media Properties": "Background Media Properties",
+  "Background Video": "Background Video",
+  "Background Media": "Background Media",
+  "Style": "Style",
+  "Card Styling": "Card Styling",
+  "Card Style Property": "Card Style Property",
+  "Layout": "Layout",
+  "Content Appearance": "Content Appearance",
+  "Card Layout Property": "Card Layout Property",
   "Expanded": "Expanded",
   "Contained": "Contained",
   "Card Layout": "Card Layout",
@@ -148,15 +175,15 @@
   "Host's name": "Host's name",
   "Chat Widget": "Chat Widget",
   "Chat Platform": "Chat Platform",
-  "Edit Author": "Edit Author",
-  "Create Author": "Create Author",
+  "Edit Host": "Edit Host",
+  "Create Host": "Create Host",
   "Clear": "Clear",
   "Edits: Making changes here will apply to all journeys that share this Host.": "Edits: Making changes here will apply to all journeys that share this Host.",
   "Select a Host": "Select a Host",
   "Cannot edit hosts for this old journey": "Cannot edit hosts for this old journey",
   "Only": "Only",
   "members can edit this": "members can edit this",
-  "Authors": "Authors",
+  "Hosts": "Hosts",
   "Create New": "Create New",
   "Why does your journey need a host?": "Why does your journey need a host?",
   "A great way to add personality to your content is to include both male and female journey creators. Diverse creators, especially with a local feel, are more likely to engage users in conversation.": "A great way to add personality to your content is to include both male and female journey creators. Diverse creators, especially with a local feel, are more likely to engage users in conversation.",
@@ -166,11 +193,14 @@
   "Click here for formium docs on finding your api token": "Click here for formium docs on finding your api token",
   "Form Slug": "Form Slug",
   "Project Id": "Project Id",
-  "Action": "Action",
   "Credentials": "Credentials",
   "Complete": "Complete",
   "Incomplete": "Incomplete",
   "Formium Credentials": "Formium Credentials",
+  "Image Source": "Image Source",
+  "Image Options": "Image Options",
+  "Form Submission": "Form Submission",
+  "Button Icon": "Button Icon",
   "Cards": "Cards",
   "Conditions": "Conditions",
   "User can't skip interaction on the current card, like watching video or interacting with questions.": "User can't skip interaction on the current card, like watching video or interacting with questions.",
@@ -178,11 +208,17 @@
   "Locked With Interaction": "Locked With Interaction",
   "Default next step in journey": "Default next step in journey",
   "No next step in journey": "No next step in journey",
+  "Next Card": "Next Card",
+  "Unlocked Card": "Unlocked Card",
+  "Feedback": "Feedback",
   "One Row": "One Row",
   "Two Rows": "Two Rows",
   "Three Rows": "Three Rows",
   "Four Rows": "Four Rows",
   "Minimum Size": "Minimum Size",
+  "Text Variant": "Text Variant",
+  "Text Color": "Text Color",
+  "Text Alignment": "Text Alignment",
   "Header 1": "Header 1",
   "Header 2": "Header 2",
   "Header 3": "Header 3",
@@ -195,27 +231,18 @@
   "Body 2": "Body 2",
   "Caption": "Caption",
   "Overline": "Overline",
-  "Color": "Color",
-  "Move Up or Down": "Move Up or Down",
-  "Select a Block to Insert": "Select a Block to Insert",
-  "Form": "Form",
-  "Social Share Preview": "Social Share Preview",
-  "Journey": "Journey",
-  "Blocks cannot be placed on top of Video Block": "Blocks cannot be placed on top of Video Block",
-  "Blocks": "Blocks",
-  "Add": "Add",
-  "Edit": "Edit",
-  "Done": "Done",
+  "Video Source": "Video Source",
+  "Video Options": "Video Options",
   "Social Image": "Social Image",
-  "Are you sure you would like to delete this card?": "Are you sure you would like to delete this card?",
-  "Edit Journey Actions": "Edit Journey Actions",
   "Preview": "Preview",
+  "Edit Journey Actions": "Edit Journey Actions",
   "Template Settings": "Template Settings",
   "Title": "Title",
   "Description": "Description",
   "Public information about a person or a team created this journey": "Public information about a person or a team created this journey",
   "Creator's Info": "Creator's Info",
   "Embed web link from Google Slides or Canva": "Embed web link from Google Slides or Canva",
+  "Add": "Add",
   "Recommended length: six words or shorter": "Recommended length: six words or shorter",
   "Publicly visible on template details page": "Publicly visible on template details page",
   "RTL languages will change the journey flow": "RTL languages will change the journey flow",
@@ -279,6 +306,9 @@
   "Available Languages": "Available Languages",
   "Apply": "Apply",
   "Video Library": "Video Library",
+  "Button": "Button",
+  "Option": "Option",
+  "Subscribe": "Subscribe",
   "Journeys Archived": "Journeys Archived",
   "Journeys Trashed": "Journeys Trashed",
   "No journeys to display.": "No journeys to display.",
@@ -437,6 +467,7 @@
   "{{count}} Videos_one": "{{count}} Video",
   "{{count}} Videos_other": "{{count}} Videos",
   "Related Templates": "Related Templates",
+  "Edit": "Edit",
   "Before You Start": "Before You Start",
   "Please review these documents:": "Please review these documents:",
   "I agree with listed above conditions and requirements": "I agree with listed above conditions and requirements",
@@ -451,6 +482,7 @@
   "Button click": "Button click",
   "Form submitted": "Form submitted",
   "Sign Up Submission": "Sign Up Submission",
+  "Poll": "Poll",
   "Skip Step": "Skip Step",
   "Next Step": "Next Step",
   "Video Start": "Video Start",
@@ -459,8 +491,8 @@
   "Video Progress": "Video Progress",
   "Video expanded to fullscreen at": "Video expanded to fullscreen at",
   "Video completed": "Video completed",
-  "Next Card": "Next Card",
   "Selected Card": "Selected Card",
+  "Journey": "Journey",
   "ID": "ID",
   "Last Active": "Last Active",
   "User Data": "User Data",
