chore: run extract translations

--- a/libs/locales/en/apps-journeys-admin.json
+++ b/libs/locales/en/apps-journeys-admin.json
@@ -108,18 +108,18 @@
   "Navigate to:": "Navigate to:",
   "Redirect user to the selected resource": "Redirect user to the selected resource",
   "Default Next Step defined in the current card settings.": "Default Next Step defined in the current card settings.",
-  "Button Properties": "Button Properties",
   "Form Properties": "Form Properties",
+  "Card Properties": "Card Properties",
+  "Video Properties": "Video Properties",
   "Image Properties": "Image Properties",
-  "Poll Properties": "Poll Properties",
+  "Typography Properties": "Typography Properties",
+  "Button Properties": "Button Properties",
   "Poll Option Properties": "Poll Option Properties",
   "Subscribe Properties": "Subscribe Properties",
-  "Card Properties": "Card Properties",
   "Feedback Properties": "Feedback Properties",
-  "Typography Properties": "Typography Properties",
-  "Video Properties": "Video Properties",
-  "Footer Properties": "Footer Properties",
   "Social Share Preview": "Social Share Preview",
+  "Add a block": "Add a block",
+  "Footer Properties": "Footer Properties",
   "Action": "Action",
   "Color": "Color",
   "Background Color": "Background Color",
@@ -253,6 +253,8 @@
   "Metadata": "Metadata",
   "Categories": "Categories",
   "About": "About",
+  "Done": "Done",
+  "Edit": "Edit",
   "Prompt must be at least one character": "Prompt must be at least one character",
   "Prompt": "Prompt",
   "Add image by URL": "Add image by URL",
@@ -467,7 +469,6 @@
   "{{count}} Videos_one": "{{count}} Video",
   "{{count}} Videos_other": "{{count}} Videos",
   "Related Templates": "Related Templates",
-  "Edit": "Edit",
   "Before You Start": "Before You Start",
   "Please review these documents:": "Please review these documents:",
   "I agree with listed above conditions and requirements": "I agree with listed above conditions and requirements",
